[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "hgc"
version = "0.3.2"
description = "A python package for correction, validation and analysis of ground water quality samples"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "AnteaGroup Belgium", email = "Martinus.vandenBerg@anteagroup.be"},
    {name = "KWR Water Research Institute", email = "martin.korevaar@kwrwater.nl"},
    {name = "KWR Water Research Institute", email = "martin.van.der.schans@kwrwater.nl"}
]
requires-python = ">=3.8"

dependencies = [
    "pandas>=0.23",
    "openpyxl>=3.0.0",
    "xlrd>=1.0.0",
    "phreeqpython>=1.3.2",
    "scipy"
]

[project.urls]
Source = "https://github.com/KWR-Water/hgc"
Documentation = "http://hgc.readthedocs.io/en/latest/"
Tracker = "https://github.com/KWR-Water/hgc/issues"
Help = "https://github.com/KWR-Water/hgc/issues"